--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,14 @@ Version: 0.1-0
 Date: 2020-08-13
 Title: Slanted Matrices and Ordered Clustering
 Description: Slanted matrices and ordered clustering for better visualization of similarity data.
-Author: Oren Ben-Kiki <oren@ben-kiki.org>
-Maintainer: Oren Ben-Kiki <oren@ben-kiki.org>
+Authors@R: c(
+        person("Oren", "Ben-Kiki", email="oren@ben-kiki.org", role=c("aut", "cre")),
+        person("Weizmann Institute of Science", role="cph")
+    )
 RoxygenNote: 6.1.1
 Encoding: UTF-8
 License: MIT + file LICENSE
-Imports: Matrix, pheatmap, pracma, stats, wrapr
+Imports: Matrix, pheatmap, pracma, stats
 LazyData: true
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
